--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Симулятор прибыли</title>
+  <title>Симулятор прибыли v0.1</title>
   <style>
   body {
       text-align: center;
-  }
-  
-  body.light-theme {
-      color: black;
+      color: white;
+      background-color: black;
   }
   
   
@@ -19,6 +17,7 @@
       background-color: orange;
       border-radius: 10px;
       border-color: orange;
+      color: white;
       
   }
   </style>
@@ -29,6 +28,12 @@
       <br>
       <h2>Upgrade:</h2>
       <button class="upgrade" id="upgradee"></button>
+      
+      <br>
+      <br>
+      Прошу заметить, до версии игры 1.0 баланс, престижи, и весь накопленный процесс
+      <br>
+      !!!СОХРАНЯТСЯ НЕ БУДУТ!!!
   <script>
   let balance = document.getElementById('bal')
   let buttonUpgrade = document.getElementById('upgradee')
@@ -62,7 +67,7 @@
 function upgrades() {
       if(counter >= price) {
           counter -= price
-          price *= 1.15
+          price *= 1.05
           click += 1
           displaycounter = counter
           displayPrice = price
