--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       font-size: 20px;
       background-color: purple;
       border-radius: 10px;
-      border-color: blue;
+      border-color: pink;
       color: white;
       
   }
